# natmap-openwrt-sync

./: .gitignore  Dockerfile  config.yaml  docker-compose.yaml  mappings.json  openwrt_natmap_callback.sh  pyproject.toml
.github/workflows/: docker-image.yml
natmap_openwrt_sync/: __main__.py  config.py  ssh.py  storage.py  utils.py
tools/: listen_to_ws.py
