[tool.poetry]
name = "natmap-openwrt-sync"
version = "0.2.3"
description = "a tool that syncs external ip and port with natmap on openwrt"
authors = ["xyqyear <xyqyear@gmail.com>"]
readme = "README.md"
packages = [{ include = "natmap_openwrt_sync" }]

[tool.poetry.dependencies]
python = "^3.11"
aiohttp = "^3.8.5"
ruamel-yaml = "^0.17.32"
fabric = "^3.2.1"
aiosqlite = "^0.19.0"

[tool.poetry.group.dev.dependencies]
black = "^23.7.0"
pytest = "^7.4.0"
coverage = "^7.3.0"
ipykernel = "^6.25.1"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
